# serverless-python-demo

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  Makefile_windows  README.md  app.py  cdk.json  index.html  mkdocs.yml  mypy.ini  objects.inv  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: maintenance.yml
.github/workflows/: codeql.yml  main-serverless-service.yml  pr-serverless-service.yml  serverless-service.yml
api/product_models/: index.html
api/stream_processor/: index.html
cdk/service/: api_construct.py  api_db_construct.py  async_construct.py  constants.py  crud_api_construct.py  crud_api_db_construct.py  service_stack.py  utils.py
decision_log/: index.html
docs/: decision_log.md  index.md  monitoring.md  opensource.md  pipeline.md
docs/api/: product_models.md  stream_processor.md
docs/examples/domain_pillar/crud/: domain.py  handler_does_it_all.py  lean_handler.py  schemas.py
docs/examples/integration_pillar/crud/: domain.py  impl.py  interface.py
docs/examples/testing_pillar/crud/: e2e_test_create_order.py  e2e_test_create_order_bad_flow.py  e2e_test_create_order_good_flow.py  (+4 more)
examples/domain_pillar/crud/: handler_does_it_all.py
examples/integration_pillar/crud/: impl.py  interface.py
examples/testing_pillar/crud/: e2e_test_create_order_bad_flow.py  e2e_test_create_order_good_flow.py  integration_test_create_product_good_flow.py  unit_test_create_product_input.py
infrastructure/: setup.py
infrastructure/product/: constants.py  crud_api_construct.py  crud_api_db_construct.py  crud_monitoring.py  custom_resource_handler.py  identity_provider_construct.py  product_stack.py  service_stack.py  stack_utils.py  store_intercepted_events.asl  stream_processor_construct.py  stream_processor_testing_construct.py  utils.py
infrastructure/product/crud/: crud_api_construct.py  crud_api_db_construct.py  crud_monitoring.py  identity_provider_construct.py
infrastructure/product/stream_processor/: stream_processor_construct.py
monitoring/: index.html
opensource/: index.html
pipeline/: index.html
product/: constants.py
product/crud/dal/: __init__.py  db_handler.py  dynamo_dal_handler.py  idempotency.py
product/crud/domain_logic/: create_product.py  delete_product.py  get_product.py  handle_create_request.py  handle_delete_request.py  handle_get_request.py  handle_list_request.py  list_products.py
product/crud/handlers/: constants.py  create_product.py  delete_product.py  get_product.py  handle_create_product.py  handle_delete_product.py  handle_get_product.py  handle_list_products.py  list_products.py
product/crud/integration/: __init__.py  db_handler.py  dynamo_dal_handler.py  dynamo_db_handler.py
product/crud/models/: exceptions.py  input.py  output.py  product.py
product/crud/schemas/: exceptions.py  input.py  output.py  shared_types.py
product/models/products/: product.py  validators.py
product/stream_processor/domain_logic/: product_notification.py
product/stream_processor/handlers/: process_stream.py  stream_handler.py
product/stream_processor/models/: product.py
search/: search_index.json
service/crud/dal/: db_handler.py  dynamo_dal_handler.py
service/crud/handlers/: create_product.py
service/crud/logic/: handle_create_request.py
service/crud/schemas/: input.py  output.py  shared_types.py
service/handlers/: create_order.py
service/handlers/schemas/: env_vars.py
service/logic/: handle_create_request.py
tests/: crud_utils.py  utils.py
tests/data_fetcher/: events.py
tests/e2e/crud/: conftest.py  test_create_order.py  test_create_product.py  test_delete_product.py  test_get_product.py  test_list_products.py  test_product_notifications.py  utils.py
tests/infrastructure/: test_cdk.py
tests/integration/: conftest.py  test_create_order.py
tests/integration/crud/: test_create_product.py  test_delete_product.py  test_get_product.py  test_list_products.py
tests/integration/stream_processor/: test_eventbridge_provider.py  test_product_notifications.py
tests/unit/crud/: conftest.py  test_create_product_input.py  test_create_product_output.py  test_dal_schema.py  test_db_handler.py  test_get_product_input.py  test_get_product_output.py  test_product_id.py  test_product_path_parms_input.py
tests/unit/stream_processor/: conftest.py  data_builder.py  test_eventbridge_provider.py  test_events.py  test_functions.py  test_process_stream_handler.py  test_product_notification.py  test_stream_handler.py
(+30 files in other folders)
